updated pom.xml, everything works fine